# voice-secure-wallet

./: .dockerignore  .gitignore  .gitignore 2  README.md  dependency-check-suppressions.xml  pom.xml
.github/: CODEOWNERS  merge-policy.yml  pull_request_template.md
.github/workflows/: capability-evidence.yml  container-supply-chain.yml  pr-required.yml  security.yml  service-ci.yml
apps/mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/: README.md  index.html  styles.css
build-support/: pom.xml
docs/: ownership.md  phase-1-ledger-core.md  phase-10-api-runtime.md  phase-11-mobile-ui-stack.md  phase-12-mobile-typescript.md  phase-13-mobile-api-client.md  phase-14-mobile-fetch-transport.md  phase-15-mobile-token-session.md  phase-16-mobile-redux-api-flows.md  phase-17-mobile-resilience-policy.md  phase-18-api-local-http-listener.md  phase-19-durable-infrastructure-readiness.md  phase-2-payment-saga.md  phase-20-terraform-aws-baseline.md  phase-21-production-cutover-readiness.md  phase-22-production-ingress-readiness.md  phase-23-mobile-native-secure-storage.md  phase-24-mobile-screen-commands.md  phase-25-pact-schema-registry-readiness.md  phase-3-identity-fraud-compliance.md  phase-4-event-backbone.md  phase-5-voice-biometrics.md  phase-9-api-adapters.md  release-runbook.md  ubiquitous-language.md
docs/adr/: 0001-signed-ledger.md
docs/api/: asyncapi.yaml  openapi.yaml
docs/architecture/: architecture-and-uml-diagrams.md  container-diagram.md  current-container-diagram.md  current-payment-flow.md  current-system-context.md  ledger-sequence.md  module-catalogue.md  payment-sequence.md  reconciliation-flow.md  system-context.md
docs/aws-evidence/: architecture.dot  cost-estimate.md  deployment-summary.md  msk-event-flow.md  rds-validation.md  redis-idempotency.md  s3-kms-validation.md  security-controls.md  teardown-evidence.md  terraform-plan.txt
docs/compliance/: fica-controls.md  pci-scope.md  popia-data-flow.md
docs/decisions/: ADR-001-modular-monolith.md  ADR-002-money-representation.md  ADR-003-double-entry-ledger.md  ADR-004-payment-saga.md  ADR-005-transactional-outbox.md  ADR-006-voice-authorisation.md  ADR-007-deployment-boundaries.md
docs/engineering/: merge-policy.md
docs/operations/: aws-staging-deployment.md  disaster-recovery.md  phase3-evidence-manifest.example.json  phase4-evidence-manifest.example.json  phase5-evidence-manifest.example.json  reconciliation.md  runbooks.md  slo.md
docs/product/: capabilities.yaml  current-capability-status.md  remaining-work.md
docs/security/: access-control-matrix.md  data-classification.md  secret-management.md  threat-model.md
docs/testing/: current-test-baseline.md  (+5 more)
scripts/: aws-staging-deployment.sh  classify-critical-paths.py  generate-capability-status.py  test-ledger-service.ps1  test-postgres-migrations.sh  test-services.ps1  test-suite.ps1  test-terraform-aws-baseline.sh  test-verification.ps1  validate-phase3-evidence.py  validate-phase4-evidence.py  validate-phase5-evidence.py
services/voice-service/: Dockerfile  README.md  pyproject.toml  test_voice_service.py  voice_service.py
services/voice-service/migrations/: V001__voice_persistence.sql
services/voice-service/src/voice_service/: __init__.py  __main__.py  http_runtime.py  persistence.py  postgres_repository.py
services/voice-service/tests/: test_http_runtime.py  test_persistence_foundation.py  test_postgres_repository.py  test_voice_service.py
(+464 files in other folders)
